--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 							</li>
 							<div class="col-6-12 left fromRight">
 									<p class="small text-blueGrey margin-bottom-2" style="">Kvar av projektets avkastning fram till garantiperiodens utgång efter 10 år. Ett exempel.</p>
-									<img class="macbook-62 soft-shadow margin-0" data-action="zoom" width="800" style="border-radius: 8px;margin: 0px !important;" src="assets/img/ispect/graph2.png" alt="Graf av entreprenadkostnader" />
+									<img class="macbook-62 soft-shadow margin-0" data-action="zoom" width="900" style="border-radius: 8px;margin: 0px !important;" src="assets/img/ispect/graph_blue.jpg" alt="Graf av entreprenadkostnader" />
 							</div>
 						</ul>
 					</div>
@@ -229,7 +229,7 @@
 								<div class="ae-2 fromLeft">
 									<p>iSpect ger direkt felavhjälpning, lättillgänglig och säker dokumentation samt noll byggfel.</p>
 								</div>
-								<p class="popupTrigger blue text-white common-Button" data-popup-id="ispect-details">Vårt helhetskoncept med iSpect</p>
+								<a class="common-Button blue text-white popupTrigger" data-popup-id="ispect-details">Vårt helhetskoncept med iSpect</a>
 							</li>
 						</ul>
 					</div>
