added swedish keywords

--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -6,10 +6,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="keywords" content="besiktningsman.se, besiktningar, syner, bygg, entreprenad, ncc, skanska, jm, entreprenör, byggentreprenör, noteringar, dokument, ritningar, projekt,
-						fallstudie, lösningar, översikt, samlingsplats, ispect, ispect-portal, återrapportering, rapportering, felnotering, bygglösningar,
-						lean production, lean startup, startup, construction, industri, besiktning, besiktiga, besikta, entreprenadbesiktning, besiktningsman,
-						ritningsapp, kontroll, arbetsledare, platschef, entreprenadingenjör, bygg app, lean bygg, projekthantering, kommunikation,">
+	<meta name="keywords" content="besiktning av lägenhet, besiktningsman bostadsrätt, brf besiktning, Lägenhetsbesiktning, Besiktning bostadsrätt, besiktning lägenhet, besikta hus, besikta villa, besiktiga hus, besiktning av hus, besiktning villa, besiktningsman hus, besiktning av fastighet, Entreprenadbesiktning, entreprenadbesiktningar, hus besiktning, husbesiktning, besiktning fastighet, fastighetsbesiktning, överbesiktning, Obligatorisk Ventilationskontroll, OVK, ovk behörighet, ovk besiktning, ovk besiktning stockholm, ovk kontroll, ovk protokoll, ventilationskontroll, ventilationskontroll ovk, ovk regler, fuktutredning, avfuktare krypgrund, Avfuktare vind, sorptionsavfuktare, Fuktbesiktning, slutbesiktning hus, slutbesiktning, kvalitetsansvarig, Kontrollansvarig bygglov, certifierad kontrollansvarig, kontrollansvarig pbl Göteborg, kontrollansvarig pbl Malmö, kontrollansvarig pbl Norrköping, kontrollansvarig pbl Stockholm, Kontrollansvarig, kvalitetsansvarig pbl, plan och bygglagen, kontrollansvarig pbl, plan- och bygglagen, statusbesiktning, efterbesiktning, särskild besiktning, överlåtelsebesiktning pris, överlåtelsebesiktning, överlåtelsebesiktningar, Boka överlåtelsebesiktning, garantibesiktning">
 	<!-- favicons -->
 	<link rel="shortcut icon" href="../favicon.ico">
 	<!-- Making the website social media friendly-->
