--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -6,10 +6,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="keywords" content="besiktningsman.se, besiktningar, syner, bygg, entreprenad, ncc, skanska, jm, entreprenör, byggentreprenör, noteringar, dokument, ritningar, projekt,
-						fallstudie, lösningar, översikt, samlingsplats, ispect, ispect-portal, återrapportering, rapportering, felnotering, bygglösningar,
-						lean production, lean startup, startup, construction, industri, besiktning, besiktiga, besikta, entreprenadbesiktning, besiktningsman,
-						ritningsapp, kontroll, arbetsledare, platschef, entreprenadingenjör, bygg app, lean bygg, projekthantering, kommunikation,">
+	<meta name="keywords" content="besiktningsman.se, besiktningsman.se nyheter, backåkra">
 	<!-- favicons -->
 	<link rel="shortcut icon" href="../favicon.ico">
 	<!-- Making the website social media friendly-->
