--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 
 					<ul class="grid fixedSpaces left">
 						<li class="col-5-10 wide-col ae-3">
-							<a href="/" class="logo"><img src="../assets/svg/bm_logo_white.svg" alt="Besiktningsman.se" style="width: 250px;"></a>
+							<a href="/" class="logo"><img src="assets/svg/bm_logo_white.svg" alt="Besiktningsman.se" style="width: 250px;"></a>
 						</li>
 						<li class="col-5-10 ae-3">
 							<h3 class="margin-bottom-1">Kontor</h3>
@@ -440,7 +440,7 @@
 									<p>Kan besiktningsmannen under sitt arbete kontrollera, dokumentera, lagra och sända alla noteringar och projektdata direkt via sin läsplatta.</p>
 								</li>
 								<li class="col-6-12 left">
-									<img class="" src="../assets/img/ispect/ipad_front_sv.png" width="600" alt="iPad Image" />
+									<img class="" src="assets/img/ispect/ipad_front_sv.png" width="600" alt="iPad Image" />
 								</li>
 							</ul>
 
