--- a/karriar/index.html
+++ b/karriar/index.html
@@ -220,7 +220,7 @@
 	</section>
 
 	<!-- POLICYS Popup Text -->
-	<div class="popup animated" data-popup-id="policy">
+	<div class="popup animated white" data-popup-id="policy">
 		<div class="close button closeButton white left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
 		<div class="content popupContent">
 			<div class="container">
