removed p attribute to the phone nr on the services popover

--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -828,7 +828,7 @@
 							</div>
 						</ul>
 						<!-- cd-accordion-menu -->
-							<a href="/kontakt/" class="blue common-Button margin-top-1">Kontakta oss för bokning</a> <p><a href="tel:0101654000" class="bold text-blue margin-left-1">Eller ring direkt: 010-165 40 00</a></p>
+							<a href="/kontakt/" class="blue common-Button margin-top-1">Kontakta oss för bokning</a> <a href="tel:0101654000" class="bold text-blue margin-left-1">Eller ring direkt: 010-165 40 00</a>
 
 					</ul>
 
