Added a file upload 3rd party form to the Services page. Needs further testing

--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -154,7 +154,7 @@
 								</div>
 								<ul class="items-32">
 									<li class="fix-4-12 toLeft text-32">
-										<a href="../kontakt" class="blue common-Button">Vill du veta mer? Kontakta oss!</a>
+										<a class="blue common-Button popupTrigger" data-popup-id="service_contact">Vill du veta mer? Kontakta oss!</a>
 									</li>
 								</ul>
 							</li>
@@ -816,6 +816,48 @@
 			</div>
 		</div>
 	</div>
+	<!-- POLICYS Popup Text -->
+	<div class="popup animated white" data-popup-id="service_contact">
+		<div class="close button closeButton white left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
+		<div class="content popupContent">
+			<div class="container">
+					<div class="wrap spaces">
+						<div class="fix-5-12">
+							<h1 class="">Vi behöver följande information av er</h1>
+							<div class="pad shadow selected">
+								<form  class="wide center" role="form" action="https://liveformhq.com/form/00a1265d-af82-44dc-aba7-8ef01018c6c3" method="POST" accept-charset="utf-8" enctype="multipart/form-data">
+								  <input type="hidden" name="utf8" value="✓">
+								  <input type="hidden" name="_redirect" value="http://macbook-pro.local:5757/erbjudande/thanks.html">
+									<h3></h3>
+								  <div class="form-group">
+								    <label for="name" class="cropTop left small bold">Namn</label>
+								    <input type="text" class="form-control stroke left wide" name="name" id="name" placeholder="T.ex Erika Svensson...">
+								  </div>
+
+								  <div class="form-group">
+								    <label for="email" class="cropTop left small bold">E-post</label>
+								    <input type="email" class="form-control stroke left wide" name="email" id="email" placeholder="T.ex erika.svensson@gmail.com">
+								  </div>
+								  <div class="form-group">
+								    <label for="tel" class="cropTop left small bold">Tel nr</label>
+								    <input type="tel" class="form-control stroke left wide" name="phone" id="phone" placeholder="T.ex 073400333">
+								  </div>
+									<br>
+									<div class="form-group">
+										<label for="resume" class="cropTop left small bold">Vi behöver även entreprenadkontrakt samt ritningar</label>
+										<input type="file" name="resume" class="text-blue bold wide" multiple />
+									</div>
+									<br>
+								  <button type="submit" class="common-Button blue text-white bold wide" >Skicka!</button>
+								</form>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
 
 	<!-- POLICYS Popup Text -->
 	<div class="popup animated white" data-popup-id="policy">
