adding correct buttons for the new contact form on the Services page

--- a/erbjudande/thanks.html
+++ b/erbjudande/thanks.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Besiktningsman.se | Vårt erbjudande</title>
+	<title>Besiktningsman.se | Tack för ditt meddelande!</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -31,7 +31,6 @@
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 	<script src="../js/plugins.js" type="text/javascript" name="plugins"></script>
 	<script src="../js/slides.js" type="text/javascript" name="main-scripts"></script>
-	<script src="../js/custom.js" type="text/javascript" name="main-scripts"></script>
 </head>
 <body class="slides scroll simplifiedMobile">
 	<!-- Slide #03 -->
@@ -47,13 +46,12 @@
 	            <h1 class="hero">Tack för ditt meddelande! </h1>
 							<p>Vi hör av oss så fort vi kan med uppföljning av din bokning.<br> Skulle några frågor dyka upp under tiden så finns vi på <a href="tel:0101654000" class="bold text-blue">telefon: 010445454</a></p>
 							<div class="close common-Button closeButton blue text-white left">
-								<a href="../erbjudande/">Gå tillbaka till våra erbjudanden</a>
+								<a href="../erbjudande/">Gå tillbaka till vårt erbjudande</a>
 							</div>
 	        </div>
 
 	      </div>
 	    </div>
 	  </div>
-	  <div class="background" style="background-image:url(assets/img/img-3.jpg)"></div>
 	</section>
 </body>
