--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -189,7 +189,7 @@
 								</div>
 								<ul class="items-32">
 									<li class="fix-4-12 toLeft text-32">
-										<a href="../kontakt" class="blue common-Button">Kontakta oss för bokning</a>
+										<a class="blue common-Button popupTrigger" data-popup-id="service_contact">Vill du veta mer? Kontakta oss!</a>
 									</li>
 								</ul>
 							</li>
@@ -219,7 +219,7 @@
 								</div>
 								<ul class="items-32">
 									<li class="fix-4-12 toLeft text-32">
-										<a href="../kontakt" class="blue common-Button">Kontakta oss för bokning</a>
+										<a class="blue common-Button popupTrigger" data-popup-id="service_contact">Vill du veta mer? Kontakta oss!</a>
 									</li>
 								</ul>
 							</li>
