added go squared js, moved js files to the bottom of each page, added type forms instead of regular one

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -27,10 +27,15 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700|Material+Icons" rel="stylesheet" type="text/css" />
 	<!-- Styles -->
 	<link href="../css/slides.css" rel="stylesheet" type="text/css">
-	<!-- Scripts -->
-	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-	<script src="../js/plugins.js" type="text/javascript" name="plugins"></script>
-	<script src="../js/slides.js" type="text/javascript" name="main-scripts"></script>
+	<!-- GoSquared -->
+	<script>
+  !function(g,s,q,r,d){r=g[r]=g[r]||function(){(r.q=r.q||[]).push(
+  arguments)};d=s.createElement(q);q=s.getElementsByTagName(q)[0];
+  d.src='//d1l6p2sc9645hc.cloudfront.net/tracker.js';q.parentNode.
+  insertBefore(d,q)}(window,document,'script','_gs');
+
+  _gs('GSN-521260-L');
+	</script>
 </head>
 
 <body class="slides scroll simplifiedMobile">
@@ -119,16 +124,18 @@
 					<h1 class="">Hör gärna av dig!</h1>
 					<p>
 						<a href="tel:0101654000" class="bold text-white opacity-10">Tel: 010-165 40 00</a>
-						<br>
-						<br>
-						<button class="common-Button text-blue white popupTrigger" data-popup-id="contactInfo">Söker du en specifik person?</button>
 					</p>
 					<div class="fix-5-12">
 						<div class="pad shadow selected">
 							<h3 class="text-blue">Ont om tid?</h3>
 							<p class="small bold dark" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
+							<a class="typeform-share common-Button wide blue cropBottom" href="https://sebastian209.typeform.com/to/Qwy9Nf" data-mode="1" target="_blank">tryck här för att öppna formuläret</a>
+							<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm_share',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
 							<br>
-							<form action="ajax-email.php" id="contact-form" method="post" class="wide center" data-ajax-form="true">
+							<br>
+							<br>
+							<a class="text-blue popupTrigger small bold" data-popup-id="contactInfo">Söker du en specifik person?</a>
+							<!-- <form action="ajax-email.php" id="contact-form" method="post" class="wide center" data-ajax-form="true">
 								<div class="label cropTop"><label class="cropTop left small bold" for="name55">För och efternamn</label></div>
 								<input class="stroke left wide" id="name55" type="name" name="yourName" placeholder="Ert namn..." required/>
 								<div class="label"><label class="left small bold" for="email55">E-post adress</label></div>
@@ -138,7 +145,7 @@
 								<div class="label"><label class="left small bold" for="message55">Meddelande</label></div>
 								<textarea class="left " id="message55" type="text" name="yourMessage" placeholder="Ditt meddelande..." required></textarea>
 								<input class="common-Button wide blue cropBottom" type="submit" name="submit" value="Skicka meddelandet" data-success-text="Skickat!" data-success-class="green" />
-							</form>
+							</form> -->
 						</div>
 					</div>
 
@@ -595,9 +602,10 @@
 			</div>
 		</div>
 	</div>
-	<!-- Preloader -->
-	<div class="loadingIcon"><svg class="loading-icon" id="loading-circle" viewBox="0 0 18 18"><circle class="circle" opacity=".1" stroke="#fff" stroke-width="2" stroke-miterlimit="10" cx="9" cy="9" r="8" fill="none"></circle><circle class="dash" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10" stroke-dasharray="1,100" cx="9" cy="9" r="8" fill="none"></circle></svg></div>
-	<!-- Panel Bottom #22 -->
+	<!-- Scripts -->
+	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+	<script src="../js/plugins.js" type="text/javascript" name="plugins"></script>
+	<script src="../js/slides.js" type="text/javascript" name="main-scripts"></script>
 </body>
 
 </html>
