--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -30,10 +30,15 @@
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700|Material+Icons" rel="stylesheet" type="text/css" />
 	<!-- Styles -->
 	<link href="../css/slides.css" rel="stylesheet" type="text/css">
-	<!-- Scripts -->
-	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-	<script src="../js/plugins.js" type="text/javascript" name="plugins"></script>
-	<script src="../js/slides.js" type="text/javascript" name="main-scripts"></script>
+	<!-- GoSquared -->
+	<script>
+  !function(g,s,q,r,d){r=g[r]=g[r]||function(){(r.q=r.q||[]).push(
+  arguments)};d=s.createElement(q);q=s.getElementsByTagName(q)[0];
+  d.src='//d1l6p2sc9645hc.cloudfront.net/tracker.js';q.parentNode.
+  insertBefore(d,q)}(window,document,'script','_gs');
+
+  _gs('GSN-521260-L');
+	</script>
 </head>
 
 <body class="slides scroll simplifiedMobile">
@@ -529,7 +534,10 @@
 			</div>
 		</div>
 	</div>
-
+	<!-- Scripts -->
+	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+	<script src="../js/plugins.js" type="text/javascript" name="plugins"></script>
+	<script src="../js/slides.js" type="text/javascript" name="main-scripts"></script>
 </body>
 
 </html>
