Added TypeForm to the Services page

--- a/erbjudande/index.html
+++ b/erbjudande/index.html
@@ -138,10 +138,13 @@
 	<!-- Slide #55 -->
 	<section class="slide fade kenBurns" id="">
 		<div class="content">
-			<div class="container" style="height: 460px;">
+			<div class="container" style="height: 560px;">
 				<div class="wrap">
 					<div class="fix-10-12">
-						<h1 class="hero-title">Vårt erbjudande</h1>
+							<h1 class="">Vårt erbjudande</h1>
+							<a href="#foretag" class="menu inlineBlock margin-right-2 underline"><h3 class="text">Företag</h3></a>
+							<a href="#brf" class="menu inlineBlock underline"><h3 class="">BRF</h3></a>
+							<a href="#privat" class="menu inlineBlock margin-left-2 underline"><h3 class="">Privat</h3></a>
 					</div>
 				</div>
 			</div>
@@ -173,7 +176,10 @@
 								</div>
 								<ul class="items-32">
 									<li class="fix-4-12 toLeft text-32">
-										<a class="blue common-Button popupTrigger" data-popup-id="service_contact">Vill du veta mer? Kontakta oss!</a>
+										<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Redo att sätta igång? Tryck här</a>
+										<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm_share',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
+
+										<!-- <a class="blue common-Button popupTrigger" data-popup-id="service_contact">Vill du veta mer? Kontakta oss!</a> -->
 									</li>
 								</ul>
 							</li>
@@ -208,7 +214,8 @@
 								</div>
 								<ul class="items-32">
 									<li class="fix-4-12 toLeft text-32">
-										<a class="blue common-Button popupTrigger" data-popup-id="service_contact">Vill du veta mer? Kontakta oss!</a>
+											<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Redo att sätta igång? Tryck här</a>
+											<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm_share',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
 									</li>
 								</ul>
 							</li>
@@ -221,7 +228,7 @@
 		</div>
 
 	</section>
-	<section class="slide whiteSlide kenBurns fromLeft" data-name="privat">
+	<section class="slide whiteSlide kenBurns fromLeft" data-name="privat" >
 		<div class="content">
 			<div class="container">
 				<div class="wrap">
@@ -238,7 +245,8 @@
 								</div>
 								<ul class="items-32">
 									<li class="fix-4-12 toLeft text-32">
-										<a class="blue common-Button popupTrigger" data-popup-id="service_contact">Vill du veta mer? Kontakta oss!</a>
+										<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Redo att sätta igång? Tryck här</a>
+										<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm_share',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
 									</li>
 								</ul>
 							</li>
@@ -825,7 +833,11 @@
 							</div>
 							</ul>
 							<!-- cd-accordion-menu -->
-							<a href="/kontakt/" class="blue common-Button margin-top-1">Kontakta oss för bokning</a> <a href="tel:0101654000" class="bold text-blue margin-left-1">Eller ring direkt: 010-165 40 00</a>
+							<br>
+							<br>
+							<a class="typeform-share blue common-Button" href="https://sebastian209.typeform.com/to/oZw406" data-mode="1" target="_blank">Redo att sätta igång? Tryck här</a>
+							<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm_share',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
+							<a href="tel:0101654000" class="bold text-blue margin-left-1">Eller ring direkt: 010-165 40 00</a>
 
 						</ul>
 
@@ -835,48 +847,6 @@
 			</div>
 		</div>
 	</div>
-	<!-- POLICYS Popup Text -->
-	<div class="popup animated white" data-popup-id="service_contact">
-		<div class="close button closeButton white left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
-		<div class="content popupContent">
-			<div class="container">
-					<div class="wrap spaces">
-						<div class="fix-5-12">
-							<h1 class="">Vi behöver följande information av er</h1>
-							<div class="pad shadow selected">
-								<form  class="wide center" role="form" action="https://liveformhq.com/form/00a1265d-af82-44dc-aba7-8ef01018c6c3" method="POST" accept-charset="utf-8" enctype="multipart/form-data">
-								  <input type="hidden" name="utf8" value="✓">
-								  <input type="hidden" name="_redirect" value="http://macbook-pro.local:5757/erbjudande/thanks.html">
-									<h3></h3>
-								  <div class="form-group">
-								    <label for="name" class="cropTop left small bold">Namn</label>
-								    <input type="text" class="form-control stroke left wide" name="name" id="name" placeholder="T.ex Erika Svensson...">
-								  </div>
-
-								  <div class="form-group">
-								    <label for="email" class="cropTop left small bold">E-post</label>
-								    <input type="email" class="form-control stroke left wide" name="email" id="email" placeholder="T.ex erika.svensson@gmail.com">
-								  </div>
-								  <div class="form-group">
-								    <label for="tel" class="cropTop left small bold">Tel nr</label>
-								    <input type="tel" class="form-control stroke left wide" name="phone" id="phone" placeholder="T.ex 073400333">
-								  </div>
-									<br>
-									<div class="form-group">
-										<label for="resume" class="cropTop left small bold">Vi behöver även entreprenadkontrakt samt ritningar</label>
-										<input type="file" name="resume" class="text-blue bold wide" multiple />
-									</div>
-									<br>
-								  <button type="submit" class="common-Button blue text-white bold wide" >Skicka!</button>
-								</form>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-
 
 	<!-- POLICYS Popup Text -->
 	<div class="popup animated white" data-popup-id="policy">
