header height test

--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -134,7 +134,7 @@
 	<!-- Slide #55 -->
 	<section class="slide fade kenBurns contact">
 		<div class="content">
-			<div class="container">
+			<div class="container" style="height: 560px;">
 				<div class="wrap">
 					<h1 class="">Hör gärna av dig!</h1>
 					<p>
@@ -144,12 +144,12 @@
 						<div class="pad shadow selected">
 							<h3 class="text-blue">Ont om tid?</h3>
 							<p class="small bold dark" style="font-size: 16px;">Lämna ett meddelande så hör vi av oss.</p>
-							<a class="typeform-share common-Button wide blue cropBottom" href="https://sebastian209.typeform.com/to/Qwy9Nf" data-mode="1" target="_blank">tryck här för att öppna formuläret</a>
+							<a class="typeform-share common-Button wide blue cropBottom" href="https://sebastian209.typeform.com/to/Qwy9Nf" data-mode="1" target="_blank">Öppna kontaktformuläret</a>
 							<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm_share',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
 							<br>
 							<br>
 							<br>
-							<a class="text-blue popupTrigger small bold" data-popup-id="contactInfo">Söker du en specifik person?</a>
+							<a class="text-blue popupTrigger small bold underlined" data-popup-id="contactInfo">Söker du en specifik person?</a>
 							<!-- <form action="ajax-email.php" id="contact-form" method="post" class="wide center" data-ajax-form="true">
 								<div class="label cropTop"><label class="cropTop left small bold" for="name55">För och efternamn</label></div>
 								<input class="stroke left wide" id="name55" type="name" name="yourName" placeholder="Ert namn..." required/>
