career page now hosts a TypeForm

--- a/karriar/index.html
+++ b/karriar/index.html
@@ -181,7 +181,9 @@
 										<p class="ae-6">− Bli medarbetare oavsett var i landet du bor?</p>
 									</li>
 									<li class="fix-4-12 toLeft text-32">
-										<a href="mailto:info@besiktningsman.se" class="blue common-Button">Ta kontakt med oss!</a>
+										<a class="typeform-share common-Button blue" href="https://sebastian209.typeform.com/to/MTdpEL" data-mode="1" target="_blank">Öppna kontaktformuläret</a>
+										<script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm_share',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
+
 									</li>
 								</ul>
 							</li>
