added safari specific css fix for the footer cards

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
 	<section class="globalFooterCards margin-bottom-8">
 		<div style="max-width: 1040px;" class="container-xl">
-			<a href="http://www.nordbygg.se/" target="_blank" class="common-Link globalFooterCard soft-shadow white">
+			<a href="http://www.nordbygg.se/" target="_blank" class="common-Link globalFooterCard soft-shadow white safari_only">
 				<h2 class="text-white">
 				Möt oss på nordbygg!
 				<p class="text-white opacity-10">Besiktningsman.se har monter på Nordbygg 2017</p>
