Added projects as a popover w/ lists

--- a/index.html
+++ b/index.html
@@ -203,11 +203,10 @@
 			<div class="row center-xs">
 
 				<div class="col-xs-12">
-					<h1 class="center" style="margin-top:30px;">Här entreprenadbesiktar vi just nu med iSpect</h1>
+					<h1 class="center" style="margin-top:30px;">Här entreprenadbesiktar vi just nu med iSpect </h1>
 					<div class="Section-quote Section-quote--horizontal">
 						<div class="img-fade"></div>
 						<div class="Section-quotePhoto Section-quotePhoto--lyft"></div>
-
 						<div class="row start-xs">
 							<div class="col-xs-12 col-sm-6">
 								<blockquote class="Quote Quote--lyft">
@@ -220,6 +219,10 @@
 						</div>
 
 					</div>
+					<div class="center-m-down">
+						<a class="common-Button blue text-white center popupTrigger" data-popup-id="ispect-projects">Se fler iSpect-projekt</a>
+					</div>
+
 				</div>
 
 			</div>
@@ -462,6 +465,113 @@
 				</div>
 			</section>
 
+		</div>
+	</div>
+	<!-- ispect details Popup Text -->
+	<div class="popup white" data-popup-id="ispect-projects">
+		<div class="close button closeButton white text-blue left opaque"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#back"></use></svg>Tillbaka</div>
+		<div class="content popupContent">
+			<!-- Slide #67 -->
+			<section class="slide white kenBurns">
+			  <div class="content">
+			    <div class="container">
+			      <div class="container-lg">
+
+			        <div class="fix-10-12 center toCenter margin-top-1">
+			          <h1 class="ae-1">Våra projekt</h1>
+			          <div class="ae-2"><p>Här byggs framtiden med noll fel</p></div>
+			        </div>
+			        <div class="fix-12-12">
+			          <ul class="grid later fixedSpaces equal left">
+			            <li class="col-4-12 ae-3 fromCenter">
+			              <div class="box-67">
+			                <div class="thumbnail-67">
+			                  <img src="assets/img/projects/testproject1.jpeg" class="wide"/>
+			                </div>
+			                <div class="name-67 equalElement table wide">
+			                  <div class="cell">
+			                    <div class="category-67">Baking</div>
+			                    <div class="title-67">Artisan Rye Bread</div>
+			                  </div>
+			                </div>
+			              </div>
+			            </li>
+			            <li class="col-4-12 ae-4 fromCenter">
+			              <div class="box-67">
+			                <div class="thumbnail-67">
+			                  <img src="assets/img/projects/testproject2.jpeg" class="wide"/>
+			                </div>
+			                <div class="name-67 equalElement table wide">
+			                  <div class="cell">
+			                    <div class="category-67">Cooking</div>
+			                    <div class="title-67">Blueberry Muffin</div>
+			                  </div>
+			                </div>
+			              </div>
+			            </li>
+			            <li class="col-4-12 ae-5 fromCenter">
+			              <div class="box-67">
+			                <div class="thumbnail-67">
+			                  <img src="assets/img/projects/testproject3.jpeg" class="wide"/>
+			                </div>
+			                <div class="name-67 equalElement table wide">
+			                  <div class="cell">
+			                    <div class="category-67">Preparing</div>
+			                    <div class="title-67">Chopped Parsley</div>
+			                  </div>
+			                </div>
+			              </div>
+			            </li>
+			          </ul>
+								<!-- LIST TWO -->
+								<ul class="grid later fixedSpaces equal left">
+			            <li class="col-4-12 ae-3 fromCenter">
+			              <div class="box-67">
+			                <div class="thumbnail-67">
+			                  <img src="assets/img/projects/testproject1.jpeg" class="wide"/>
+			                </div>
+			                <div class="name-67 equalElement table wide">
+			                  <div class="cell">
+			                    <div class="category-67">Baking</div>
+			                    <div class="title-67">Artisan Rye Bread</div>
+			                  </div>
+			                </div>
+			              </div>
+			            </li>
+			            <li class="col-4-12 ae-4 fromCenter">
+			              <div class="box-67">
+			                <div class="thumbnail-67">
+			                  <img src="assets/img/projects/testproject2.jpeg" class="wide"/>
+			                </div>
+			                <div class="name-67 equalElement table wide">
+			                  <div class="cell">
+			                    <div class="category-67">Cooking</div>
+			                    <div class="title-67">Blueberry Muffin</div>
+			                  </div>
+			                </div>
+			              </div>
+			            </li>
+			            <li class="col-4-12 ae-5 fromCenter">
+			              <div class="box-67">
+			                <div class="thumbnail-67">
+			                  <img src="assets/img/projects/testproject3.jpeg" class="wide"/>
+			                </div>
+			                <div class="name-67 equalElement table wide">
+			                  <div class="cell">
+			                    <div class="category-67">Preparing</div>
+			                    <div class="title-67">Chopped Parsley</div>
+			                  </div>
+			                </div>
+			              </div>
+			            </li>
+			          </ul>
+			        </div>
+
+			      </div>
+			    </div>
+			  </div>
+			  <div class="background" style="background-image:url(assets/img/img-67.jpg)"></div>
+			</section>
 		</div>
 	</div>
 	<!-- Scripts -->
